manifest/weather.yaml
apiVersion: v1
kind: Pod
metadata:
  name: weather
  labels:
    app: weather
spec:
  containers:
    - name: weather
      image: tecke/weather:latest
      ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: weather
spec:
  selector:
    app: weather
  ports:
    - port: 80
      targetPort: 8080
